# python-package-base

./: .gitignore  .gitlab-ci.yml  .pylintrc  MANIFEST.in  Pipfile  README.md  pyproject.toml
docs/source/: build-instructions.md  conf.py  getting-started.md  index.md  install.md  marketing-speech.inc.md
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
scripts/: run_tests.sh
src/package_name/: __about__.py  __init__.py  template.py
tests/: test_sanity_check.py
